# JsSpim

./: .gitignore  CMakeLists.txt  QtSpim.pro  README.md  index.html  main.cpp  setup.md  todo-step1.md  todo.txt  wasm  wasm.js  wasm.wasm  wasm.worker.js
.github/workflows/: build.yml  ci.yml  deploy-gh-pages.yml
Tests/: test_core.s
css/: index.css
js/: execution.js  index.js  instruction.js  memory.js  register.js
spim/: spim.cpp  spim.h  worker.cpp  worker.h
spim-jsspim/CPU/: run.h
spim-qtspimbot/CPU/: data.cpp  data.h  display-utils.cpp  inst.cpp  inst.h  mem.cpp  mem.h  parser.y  reg.h  run.cpp  run.h  scanner.h  spim-utils.cpp  spim-utils.h  spim.h  string-stream.h  sym-tbl.cpp  sym-tbl.h  syscall.cpp  syscall.h
spim/CPU/: CMakeLists.txt  consts.h  data.cpp  data.h  display-utils.cpp  image.cpp  image.h  image_print_stream.cpp  image_print_stream.h  inst.cpp  inst.h  instruction.h  label.h  mem.cpp  mem.h  mem_image.h  parser.h  parser.y  reg.h  reg_image.h  run.cpp  run.h  scanner.h  scanner.l  spim-utils.cpp  spim-utils.h  spim.h  string-stream.cpp  string-stream.h  sym-tbl.cpp  sym-tbl.h  syscall.cpp  syscall.h  types.h
